crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT010.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT010 Set the expected exception in `pytest.raises()`
 --> PT010.py:5:10
  |
4 | def test_ok():
5 |     with pytest.raises():
  |          ^^^^^^^^^^^^^
6 |         pass
