crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT011_glob_prefix.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT011 `pytest.raises(pickle.PicklingError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:34:24
   |
32 |         raise ValueError("Can't divide 1 by 0")
33 |
34 |     with pytest.raises(PicklingError):
   |                        ^^^^^^^^^^^^^
35 |         raise PicklingError("Can't pickle")

PT011 `pytest.raises(pickle.UnpicklingError)` is too broad, set the `match` parameter or use a more specific exception
  --> PT011.py:37:24
   |
35 |         raise PicklingError("Can't pickle")
36 |
37 |     with pytest.raises(UnpicklingError):
   |                        ^^^^^^^^^^^^^^^
38 |         raise UnpicklingError("Can't unpickle")
