crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT013.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT013 Incorrect import of `pytest`; use `import pytest` instead
  --> PT013.py:11:1
   |
 9 | # Error
10 |
11 | import pytest as other_name
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 | from pytest import fixture
13 | from pytest import fixture as other_name

PT013 Incorrect import of `pytest`; use `import pytest` instead
  --> PT013.py:12:1
11 | import pytest as other_name
12 | from pytest import fixture
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
13 | from pytest import fixture as other_name

PT013 Incorrect import of `pytest`; use `import pytest` instead
  --> PT013.py:13:1
   |
11 | import pytest as other_name
12 | from pytest import fixture
13 | from pytest import fixture as other_name
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
